# state-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  power_state.c  state.c  state.h  system_status.c  system_status.h
gmock/: gmock-gtest-all.d  gmock_main.d
lcov/: .version  CHANGES
lcov/man/: gendesc.1  genhtml.1  geninfo.1  genpng.1  lcov.1  lcovrc.5
src/: led.c  led.h  power_state.c  power_state.h  state.c  system_status.c  system_status.h
test/: state_mock.cpp  state_mock.h  state_test.cpp
